# BondforOC

./: .gitignore  README.md  gold_standard.csv  pyproject.toml  readme
bondforoc/: crossref_query_2.py  crossref_query_for_Bond_3.py  extract_comunity_fromdump.py  opencitations_query_4.py  process_gold_standard_1.py  sna_raw_creation.py
src/: 01_check_DOI_Crossref.py  03_validate_results.py
tests/unit/: test_validate_results.py
